base/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: 5stack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4G"
    nginx.ingress.kubernetes.io/client-max-body-size: "4G"
spec:
  ingressClassName: nginx
  rules:
    - host: $(API_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /me
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /matches
            pathType: Prefix
          - backend:
              service:
                name: hasura
                port:
                  number: 8080
            path: /v1
            pathType: Prefix
          - backend:
              service:
                name: hasura
                port:
                  number: 8080
            path: /v1alpha1
            pathType: Prefix
          - backend:
              service:
                name: hasura
                port:
                  number: 8080
            path: /v2
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /game-server-node/script
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /game-server-node/ping
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /avatars
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /trophies
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /system/healthz
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /system/logs/download
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /branding
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /news
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /custom-pages
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /plugins
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /events/media
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /snapshots
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /steam-match-history/upload
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /clip-views
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /notifications
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /support-requests
            pathType: Prefix
    - host: $(WEB_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /auth
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /telemetry
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /discord-invite
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /discord-bot
            pathType: Exact
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /calendar
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /quick-connect
            pathType: Exact

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demos
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-max-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/chunked-transfer-encoding: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  namespace: 5stack
spec:
  ingressClassName: nginx
  rules:
    - host: $(DEMOS_DOMAIN)
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /demos
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 5585
            path: /clips
            pathType: Prefix
          - backend:
              service:
                name: minio
                port:
                  number: 9000
            path: /5stack
            pathType: Prefix
